--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.app.json",
   "exclude": [],
+  "files": ["node_modules"],
   "compilerOptions": {
     "composite": true,
     "lib": [],
