--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "i18next-fs-backend": "^1.0.7",
     "i18next-http-middleware": "^3.0.2",
     "multer": "^1.4.2",
+    "sqlite3": "^5.1.7",
     "winston": "^3.3.3"
   },
   "devDependencies": {
