--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,13 +1,21 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["src/**/*.ts", "env.d.ts", "src/**/*", "src/**/*.vue", "./vitest.setup.ts"],
+  "include": [
+    "src/**/*.ts",
+    "env.d.ts",
+    "src/**/*",
+    "src/**/*.vue",
+    "./vitest.setup.ts",
+    "test/**/*"
+  ],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
     "noEmit": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@test/*": ["./test/*"]
     },
     "types": ["node", "jsdom", "@testing-library/jest-dom", "vistest/globals"]
   }
